fix: output filename start and end not being row-aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -734,6 +734,10 @@ body:not(.subpage--output):not(.subpage--settings) .image-options-container {
   overflow: hidden;
 }
 
+.image-output__item-filename {
+  display: flex;
+}
+
 .image-output__item-filename-start {
   overflow: hidden;
   text-overflow: ellipsis;
